// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`InputTextComponent should render the template correctly 1`] = `
<div
  id="root2"
  ng-version="20.1.7"
>
  <app-input-text
    class="ng-untouched ng-pristine ng-valid"
  >
    <div>
      <label
        class="label"
        for="id"
      >
         lab 
        <!--container-->
      </label>
      <div
        class="flex flex-row"
      >
        <input
          autocomplete="tel"
          class="input"
          id="id"
          placeholder="place"
          type="text"
        />
        <!--container-->
      </div>
      <div
        class="grid grid-cols-2"
      >
        <span
          class="helper-text"
        >
          <span
            leftassistivetext=""
          >
            
          </span>
        </span>
        <span
          class="helper-text text-right"
        >
          <span
            rightassistivetext=""
          >
            
          </span>
        </span>
      </div>
    </div>
    <!--container-->
  </app-input-text>
</div>
`;

exports[`InputTextComponent should render the template correctly if everything is provided in the vm 1`] = `
<div
  id="root6"
  ng-version="20.1.7"
>
  <app-input-text
    class="ng-untouched ng-pristine ng-valid"
  >
    <div>
      <label
        class="label"
        for="id"
      >
         lab 
        <!--container-->
      </label>
      <div
        class="flex flex-row"
      >
        <input
          autocomplete="tel"
          class="input"
          id="id"
          placeholder="place"
          type="text"
        />
        <app-button>
          <button
            class="btn primary"
          />
        </app-button>
        <!--container-->
      </div>
      <div
        class="grid grid-cols-2"
      >
        <span
          class="helper-text"
        >
          <span
            leftassistivetext=""
          >
            
          </span>
        </span>
        <span
          class="helper-text text-right"
        >
          <span
            rightassistivetext=""
          >
            
          </span>
        </span>
      </div>
    </div>
    <!--container-->
  </app-input-text>
</div>
`;

exports[`InputTextComponent should render the template correctly if it is not readonly 1`] = `
<div
  id="root9"
  ng-version="20.1.7"
>
  <app-input-text
    class="ng-untouched ng-pristine ng-valid"
  >
    <div>
      <label
        class="label"
        for="id"
      >
         lab 
        <!--container-->
      </label>
      <div
        class="flex flex-row"
      >
        <input
          autocomplete="tel"
          class="input"
          id="id"
          placeholder="place"
          type="datetime-local"
        />
        <!--container-->
      </div>
      <div
        class="grid grid-cols-2"
      >
        <span
          class="helper-text"
        >
          <span
            leftassistivetext=""
          >
            
          </span>
        </span>
        <span
          class="helper-text text-right"
        >
          <span
            rightassistivetext=""
          >
            
          </span>
        </span>
      </div>
    </div>
    <!--container-->
  </app-input-text>
</div>
`;

exports[`InputTextComponent should render the template correctly if it is readonly 1`] = `
<div
  id="root10"
  ng-version="20.1.7"
>
  <app-input-text
    class="ng-untouched ng-pristine ng-valid"
  >
    <div>
      <label
        class="label"
        for="id"
      >
         lab 
        <!--container-->
      </label>
      <div
        class="flex flex-row"
      >
        <input
          autocomplete="tel"
          class="input"
          id="id"
          placeholder="place"
          readonly=""
          type="datetime-local"
        />
        <!--container-->
      </div>
      <div
        class="grid grid-cols-2"
      >
        <span
          class="helper-text"
        >
          <span
            leftassistivetext=""
          >
            
          </span>
        </span>
        <span
          class="helper-text text-right"
        >
          <span
            rightassistivetext=""
          >
            
          </span>
        </span>
      </div>
    </div>
    <!--container-->
  </app-input-text>
</div>
`;

exports[`InputTextComponent should render the template correctly if the button is provided in the vm 1`] = `
<div
  id="root5"
  ng-version="20.1.7"
>
  <app-input-text
    class="ng-untouched ng-pristine ng-valid"
  >
    <div>
      <label
        class="label"
        for="id"
      >
         lab 
        <!--container-->
      </label>
      <div
        class="flex flex-row"
      >
        <input
          autocomplete="tel"
          class="input"
          id="id"
          placeholder="place"
          type="text"
        />
        <app-button>
          <button
            class="btn primary"
          />
        </app-button>
        <!--container-->
      </div>
      <div
        class="grid grid-cols-2"
      >
        <span
          class="helper-text"
        >
          <span
            leftassistivetext=""
          >
            
          </span>
        </span>
        <span
          class="helper-text text-right"
        >
          <span
            rightassistivetext=""
          >
            
          </span>
        </span>
      </div>
    </div>
    <!--container-->
  </app-input-text>
</div>
`;

exports[`InputTextComponent should render the template correctly when it has invalid state 1`] = `
<div
  id="root4"
  ng-version="20.1.7"
>
  <app-input-text
    class="ng-untouched ng-pristine ng-valid"
  >
    <div>
      <label
        class="label invalid"
        for="id"
      >
         lab 
        <!--container-->
      </label>
      <div
        class="flex flex-row"
      >
        <input
          autocomplete="tel"
          class="input invalid"
          id="id"
          placeholder="place"
          type="text"
        />
        <!--container-->
      </div>
      <div
        class="grid grid-cols-2"
      >
        <span
          class="helper-text invalid"
        >
          <span
            leftassistivetext=""
          >
            
          </span>
        </span>
        <span
          class="helper-text text-right invalid"
        >
          <span
            rightassistivetext=""
          >
            
          </span>
        </span>
      </div>
    </div>
    <!--container-->
  </app-input-text>
</div>
`;

exports[`InputTextComponent should render the template correctly when it has valid state 1`] = `
<div
  id="root3"
  ng-version="20.1.7"
>
  <app-input-text
    class="ng-untouched ng-pristine ng-valid"
  >
    <div>
      <label
        class="label"
        for="id"
      >
         lab 
        <!--container-->
      </label>
      <div
        class="flex flex-row"
      >
        <input
          autocomplete="tel"
          class="input"
          id="id"
          placeholder="place"
          type="text"
        />
        <!--container-->
      </div>
      <div
        class="grid grid-cols-2"
      >
        <span
          class="helper-text"
        >
          <span
            leftassistivetext=""
          >
            
          </span>
        </span>
        <span
          class="helper-text text-right"
        >
          <span
            rightassistivetext=""
          >
            
          </span>
        </span>
      </div>
    </div>
    <!--container-->
  </app-input-text>
</div>
`;

exports[`InputTextComponent should render the template if the control is disabled 1`] = `
<div
  id="root8"
  ng-version="20.1.7"
>
  <app-input-text
    class="ng-untouched ng-pristine"
  >
    <div>
      <label
        class="label"
        for="id"
      >
         lab 
        <!--container-->
      </label>
      <div
        class="flex flex-row"
      >
        <input
          autocomplete="tel"
          class="input disabled"
          disabled=""
          id="id"
          placeholder="place"
          type="text"
        />
        <!--container-->
      </div>
      <div
        class="grid grid-cols-2"
      >
        <span
          class="helper-text"
        >
          <span
            leftassistivetext=""
          >
            
          </span>
        </span>
        <span
          class="helper-text text-right"
        >
          <span
            rightassistivetext=""
          >
            
          </span>
        </span>
      </div>
    </div>
    <!--container-->
  </app-input-text>
</div>
`;

exports[`InputTextComponent should render the template if the control is enabled 1`] = `
<div
  id="root7"
  ng-version="20.1.7"
>
  <app-input-text
    class="ng-untouched ng-pristine ng-valid"
  >
    <div>
      <label
        class="label"
        for="id"
      >
         lab 
        <!--container-->
      </label>
      <div
        class="flex flex-row"
      >
        <input
          autocomplete="tel"
          class="input"
          id="id"
          placeholder="place"
          type="text"
        />
        <!--container-->
      </div>
      <div
        class="grid grid-cols-2"
      >
        <span
          class="helper-text"
        >
          <span
            leftassistivetext=""
          >
            
          </span>
        </span>
        <span
          class="helper-text text-right"
        >
          <span
            rightassistivetext=""
          >
            
          </span>
        </span>
      </div>
    </div>
    <!--container-->
  </app-input-text>
</div>
`;
